[package]
name = "naval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Compile can be optimized via suggestion here:
#  https://bevyengine.org/learn/book/getting-started/setup/

[dependencies]
rand = "0.8.4"
lyon_geom = "0.17.6"

[dependencies.bevy]
version = "0.6"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "bevy_winit",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
# `ogg` format support is enabled by default, disable if you don't want it
#default-features = false
# enable the features you care about
features = [
#  "wav",
#  "flac",
#  "mp3",
  "ogg"
]